add loading and resizing classes to slider

--- a/app/assets/styles/base/base.scss
+++ b/app/assets/styles/base/base.scss
@@ -30,3 +30,10 @@ th {
 td, th {
   padding: 5px 20px 5px 0;
 }
+
+/**
+ * Remove dirty outline when using Flickity
+ */
+.flickity-enabled {
+  outline: none;
+}
