--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -324,3 +324,70 @@
   width: 25%;
   margin-right: 20px;
 }
+
+@keyframes responsive-image-loader {
+  to {
+    transform: rotate(1turn);
+  }
+}
+/**
+ * Loading spinner
+ * 1. Absolute centering of the loader
+ * 2. Displayed
+ * 3. On top of content
+ */
+
+/// Transition duration for fade in
+/// @type Duration
+/// @group images
+$image-transition: 0.25s;
+
+/// Loader size
+/// @type Length
+/// @group images
+$image-loader-size: 30px;
+
+@mixin loading-spinner {
+  &::after {
+    content: '';
+    width: $image-loader-size;
+    height: $image-loader-size;
+    position: absolute; /* 1 */
+    top: 50%; /* 1 */
+    left: 50%; /* 1 */
+    margin: -($image-loader-size / 2); /* 1 */
+    opacity: 1; /* 2 */
+    z-index: 1; /* 3 */
+    border: 5px solid #b5b5b5;
+    border-right-color: transparent;
+    border-radius: 50%;
+    transition: opacity $image-transition;
+    animation: responsive-image-loader 1s linear infinite;
+  }
+}
+
+
+@mixin slider-loading($wrapper, $inner) {
+  .#{$wrapper} {
+    position: relative;
+
+    &::after {
+      opacity: 0;
+    }
+  }
+
+  .#{$inner} {
+    transition: $image-transition;
+  }
+
+  .is-slider-loading .#{$wrapper},
+  .is-slider-resizing .#{$wrapper} {
+    @include loading-spinner;
+  }
+
+  .is-slider-loading .#{$inner},
+  .is-slider-resizing .#{$inner} {
+    opacity: 0;
+  }
+}
+
