--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -305,10 +305,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-@mixin next-read-title($color: false) {
+@mixin next-read-title($color: false, $size: 1.5em) {
   @include font-smoothing;
   font-family: $supporting-font-stack;
-  font-size: 1.5em;
+  font-size: $size;
   font-weight: 700;
   text-align: center;
   margin-bottom: 20px;
