--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -2,6 +2,8 @@
 // This file contains all application-wide Sass variables.
 // -----------------------------------------------------------------------------
 
+$environment: 'dev' !default;
+
 // -----------------------------------------------------------------------------
 // FONT STACKS
 // -----------------------------------------------------------------------------
