--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -308,10 +308,17 @@
 @mixin next-read-title($color: false, $size: 1.5em) {
   @include font-smoothing;
   font-family: $supporting-font-stack;
-  font-size: $size;
   font-weight: 700;
   text-align: center;
   margin-bottom: 20px;
+
+  @include media('<=small') {
+    font-size: $size - ($size/5);
+  }
+
+  @include media('>small') {
+    font-size: $size;
+  }
 
   @if $color {
     color: $color;
