--- a/app/assets/includes/advertising/gtb_ressort.html
+++ b/app/assets/includes/advertising/gtb_ressort.html
@@ -4,7 +4,7 @@
     context.az = context.az || {};
     az = context.az;
     az.advertising = az.advertising || {};
-    az.advertising.pageConfig = {"siteName":"Ressort","siteId":"783709","slots":[{"name":"side-ad","placements":[{"id":"5720175","type":"desktop"}]},{"name":"escalator","placements":[{"id":"5720172","type":"desktop"}]},{"name":"rectangle","placements":[{"id":"5720181","type":"desktop"},{"id":"5720133","type":"tablet"},{"id":"5720140","type":"mobile"}]},{"name":"top-board","placements":[{"id":"5720135","type":"tablet"},{"id":"5720145","type":"mobile"},{"id":"5720176","type":"desktop"}]},{"name":"bottom-board","placements":[{"id":"5720139","type":"tablet"},{"id":"5720162","type":"mobile"},{"id":"5720173","type":"desktop"}]},{"name":"content-board","placements":[{"id":"5720149","type":"tablet"},{"id":"5720159","type":"mobile"},{"id":"5720174","type":"desktop"}]}]};
+    az.advertising.pageConfig = {"siteName":"Ressort","siteId":"783709","slots":[{"name":"side_ad","placements":[{"id":"5720175","type":"desktop"}]},{"name":"escalator","placements":[{"id":"5720172","type":"desktop"}]},{"name":"rectangle","placements":[{"id":"5720181","type":"desktop"},{"id":"5720133","type":"tablet"},{"id":"5720140","type":"mobile"}]},{"name":"top_board","placements":[{"id":"5720135","type":"tablet"},{"id":"5720145","type":"mobile"},{"id":"5720176","type":"desktop"}]},{"name":"bottom_board","placements":[{"id":"5720139","type":"tablet"},{"id":"5720162","type":"mobile"},{"id":"5720173","type":"desktop"}]},{"name":"content_board","placements":[{"id":"5720149","type":"tablet"},{"id":"5720159","type":"mobile"},{"id":"5720174","type":"desktop"}]}]};
 
   })(window);
 </script>
