--- a/app/assets/includes/advertising/liz_static.html
+++ b/app/assets/includes/advertising/liz_static.html
@@ -4,7 +4,7 @@
     context.az = context.az || {};
     az = context.az;
     az.advertising = az.advertising || {};
-    az.advertising.pageConfig = {"siteName":"Static","siteId":"783735","slots":[{"name":"side-ad","placements":[{"id":"5720514","type":"desktop"}]},{"name":"content-board","placements":[{"id":"5720500","type":"tablet"},{"id":"5720505","type":"mobile"},{"id":"5720481","type":"desktop"}]},{"name":"bottom-board","placements":[{"id":"5720510","type":"tablet"},{"id":"5720493","type":"mobile"},{"id":"5720521","type":"desktop"}]},{"name":"top-board","placements":[{"id":"5720515","type":"tablet"},{"id":"5720499","type":"mobile"},{"id":"5720487","type":"desktop"}]}]};
+    az.advertising.pageConfig = {"siteName":"Static","siteId":"783735","slots":[{"name":"side_ad","placements":[{"id":"5720514","type":"desktop"}]},{"name":"content_board","placements":[{"id":"5720500","type":"tablet"},{"id":"5720505","type":"mobile"},{"id":"5720481","type":"desktop"}]},{"name":"bottom_board","placements":[{"id":"5720510","type":"tablet"},{"id":"5720493","type":"mobile"},{"id":"5720521","type":"desktop"}]},{"name":"top_board","placements":[{"id":"5720515","type":"tablet"},{"id":"5720499","type":"mobile"},{"id":"5720487","type":"desktop"}]}]};
 
   })(window);
 </script>
