--- a/app/assets/styles/wufoo.scss
+++ b/app/assets/styles/wufoo.scss
@@ -41,7 +41,7 @@ select:focus {
 .wufoo {
   font-family: 'Colfax', 'Helvetica', 'Arial', sans-serif;
   display: block;
-  padding: 0 15px !important;
+  padding: 0 0 30px 0 !important;
   width: 100% !important;
   max-width: 1000px !important;
   padding-bottom: 60px;
