reinitialize adscript, adjust layout for side ad

--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -138,7 +138,8 @@ $breakpoints: (
   'medium': 900px,
   'before-large': 1090px,
   'large': 1150px,
-  'after-large': 1300px
+  'after-large': 1521px,
+  'switch': 1280px
 );
 
 
