fix side-ad position

--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -139,7 +139,9 @@ $breakpoints: (
   'before-large': 1090px,
   'large': 1150px,
   'after-large': 1521px,
-  'switch': 1280px
+  'switch': 1280px,
+  'advertising-medium': 728px,
+  'advertising-large': 1150px,
 );
 
 
