HeadBottom: adding link and meta tags for device icons

--- a/app/includes/__head_bottom.html
+++ b/app/includes/__head_bottom.html
@@ -2,6 +2,25 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link rel="apple-touch-icon" sizes="57x57" href="/__node__/__static__/client/images/device-icons/{{ skin }}/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/__node__/__static__/client/images/device-icons/{{ skin }}/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/__node__/__static__/client/images/device-icons/{{ skin }}/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/__node__/__static__/client/images/device-icons/{{ skin }}/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/__node__/__static__/client/images/device-icons/{{ skin }}/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/__node__/__static__/client/images/device-icons/{{ skin }}/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/__node__/__static__/client/images/device-icons/{{ skin }}/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/__node__/__static__/client/images/device-icons/{{ skin }}/apple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/__node__/__static__/client/images/device-icons/{{ skin }}/apple-touch-icon-180x180.png">
+<link rel="icon" type="image/png" href="/__node__/__static__/client/images/device-icons/{{ skin }}/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/__node__/__static__/client/images/device-icons/{{ skin }}/android-chrome-192x192.png" sizes="192x192">
+<link rel="icon" type="image/png" href="/__node__/__static__/client/images/device-icons/{{ skin }}/favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="/__node__/__static__/client/images/device-icons/{{ skin }}/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="/__node__/__static__/client/images/device-icons/{{ skin }}/manifest.json">
+<meta name="msapplication-TileColor" content="{{ "#e20613" if skin == "ot" else "#1b4d85" }}">
+<meta name="msapplication-TileImage" content="/__node__/__static__/client/images/device-icons/{{ skin }}/mstile-144x144.png">
+<meta name="msapplication-config" content="/__node__/__static__/client/images/device-icons/{{ skin }}/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+
 {# Inline the JavaScript utilities file since it needs to be synchronously
    loaded. Also, it is very lightweight so it should not make any difference. #}
 <script>
