HeadBottom: tweaking tile  color

--- a/app/includes/__head_bottom.html
+++ b/app/includes/__head_bottom.html
@@ -16,7 +16,8 @@
 <link rel="icon" type="image/png" href="/__node__/__static__/client/images/device-icons/{{ skin }}/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/png" href="/__node__/__static__/client/images/device-icons/{{ skin }}/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="/__node__/__static__/client/images/device-icons/{{ skin }}/manifest.json">
-<meta name="msapplication-TileColor" content="{{ "#e20613" if skin == "ot" else "#1b4d85" }}">
+<link rel="shortcut icon" href="/__node__/__static__/client/images/device-icons/{{ skin }}/favicon.ico">
+<meta name="msapplication-TileColor" content="{{ "#e30613" if skin == "ot" else "#1b4d85" }}">
 <meta name="msapplication-TileImage" content="/__node__/__static__/client/images/device-icons/{{ skin }}/mstile-144x144.png">
 <meta name="msapplication-config" content="/__node__/__static__/client/images/device-icons/{{ skin }}/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
