HeadBottom: updating theme color

--- a/app/includes/__head_bottom.html
+++ b/app/includes/__head_bottom.html
@@ -20,7 +20,7 @@
 <meta name="msapplication-TileColor" content="{{ "#e30613" if skin == "ot" else "#1b4d85" }}">
 <meta name="msapplication-TileImage" content="/__node__/__static__/client/images/device-icons/{{ skin }}/mstile-144x144.png">
 <meta name="msapplication-config" content="/__node__/__static__/client/images/device-icons/{{ skin }}/browserconfig.xml">
-<meta name="theme-color" content="#ffffff">
+<meta name="theme-color" content="{{ "#e30613" if skin == "ot" else "#1b4d85" }}">
 
 {# Inline the JavaScript utilities file since it needs to be synchronously
    loaded. Also, it is very lightweight so it should not make any difference. #}
