use icon component for nav

--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -180,6 +180,9 @@ $container-width: 1180px;
 /// @group container
 $sidebar-width: 350px;
 
+/// Component spacing in between components expressed in ems
+$component-spacing: 1.5em;
+
 
 // -----------------------------------------------------------------------------
 // LAYOUT MIXINS
