added static URL versioning

--- a/app/includes/__body_bottom.html
+++ b/app/includes/__body_bottom.html
@@ -1,1 +1,1 @@
-<script src="/__node__/__static__/client/client.bundled.js"></script>
+<script src="{{ staticBasePath }}/client/client.bundled.js"></script>
