--- a/app/assets/styles/base/base.scss
+++ b/app/assets/styles/base/base.scss
@@ -4,6 +4,11 @@ body {
   font: 100% / 1.5 $text-font-stack;
   color: $black;
   overflow-x: hidden; /* NOTE: Dirty hack to kill horizontal scrollbars (caused by bottom recommendations) on small screens. TODO: Improve ASAP.*/
+  padding-top: 150px;
+
+  @include media('<=medium') {
+    padding-top: 80px;
+  }
 }
 
 code {
