fix logo in styleguide

--- a/app/assets/styles/base/base.scss
+++ b/app/assets/styles/base/base.scss
@@ -3,11 +3,14 @@
 body {
   font: 100% / 1.5 $text-font-stack;
   color: $black;
-  overflow-x: hidden; /* NOTE: Dirty hack to kill horizontal scrollbars (caused by bottom recommendations) on small screens. TODO: Improve ASAP.*/
-  padding-top: 150px;
+  overflow-x: hidden;
 
   @include media('<=medium') {
     padding-top: 80px;
+  }
+
+  @include media('>medium') {
+    padding-top: 150px;
   }
 }
 
