adjust ad spacing on iPhone 5 Portrait

--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -141,6 +141,7 @@ $breakpoints: (
   'center-layout': 95.063em /* 1521px */,
   'advertising-medium': 45.5em /* 728px */,
   'advertising-large': 80em /* 1280px */,
+  'advertising-iphone5-portrait': 320px,
 );
 
 
