--- a/app/assets/styles/base/base.scss
+++ b/app/assets/styles/base/base.scss
@@ -14,6 +14,29 @@ body {
   }
 }
 
+@include media('<=medium') {
+  .is-menu-open {
+    height: 100%;
+    overflow: hidden;
+  }
+
+  body::after {
+    content: '';
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+    z-index: 75;
+  }
+
+  .is-menu-open body::after {
+    display: block;
+  }
+}
+
 code {
   font-family: $code-font-stack;
 }
