--- a/app/assets/styles/base/base.scss
+++ b/app/assets/styles/base/base.scss
@@ -14,7 +14,7 @@ body {
   }
 }
 
-@include media('<=medium') {
+@include media('<=tablet-portrait') {
   .is-menu-open {
     height: 100%;
     overflow: hidden;
