--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -140,7 +140,7 @@ $breakpoints: (
   'desktop-laptop': 71.9em /* 1151px */,
   'center-layout': 95.063em /* 1521px */,
   'advertising-medium': 45.5em /* 728px */,
-  'advertising-large': 80em /* 1280px */,
+  'advertising-large': 1186px,
   'advertising-iphone5-portrait': 320px,
 );
 
@@ -173,7 +173,7 @@ $container-spacing: 18px;
 /// Container width expressed in ems
 /// @type Length
 /// @group container
-$container-width: 1180px;
+$container-width: 1080px;
 
 /// Sidebar width expressed in ems
 /// @type Length
