draft body parsing to test

--- a/app/assets/styles/base/copy.scss
+++ b/app/assets/styles/base/copy.scss
@@ -11,6 +11,10 @@
  * 1. Remove default underline to have a better one with a gradient
  * 2. Fake the underline with a gradient to have control over position and size
  */
+.copy {
+  margin-bottom: 20px;
+}
+
 .copy a {
   color: $light-blue;
   text-decoration: none; /* 1 */
@@ -46,6 +50,10 @@
   @include type-h4;
 }
 
+.copy blockquote {
+  @include type-blockquote;
+}
+
 .copy p,
 .copy ul,
 .copy ol,
@@ -62,17 +70,28 @@
 .copy h4,
 .copy table,
 .copy > div,
-.copy > div > div {
+.copy > div > div,
+.copy strong + br {
   margin-top: 20px;
 }
 
 .copy > div:first-child {
   margin-top: 0;
+
+  > *:first-child {
+    margin-top: 0;
+  }
 }
 
-.copy blockquote {
-  @include type-blockquote;
+/**
+ * Catch common CMS content patterns
+ */
+.copy strong + br {
+  display: block;
+  content: '';
 }
+
+
 
 // scss-lint:disable ImportantRule
 
