center-align ads

--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -142,6 +142,7 @@ $breakpoints: (
   'advertising-medium': 45.5em /* 728px */,
   'advertising-large': 1390px,
   'advertising-iphone5-portrait': 320px,
+  'advertising-iphone6-portrait': 414px,
 );
 
 
