HeaderNav: stop scrolling on mobile when nav is open

--- a/app/assets/styles/base/base.scss
+++ b/app/assets/styles/base/base.scss
@@ -15,7 +15,8 @@ body {
 }
 
 @include media('<=tablet-portrait') {
-  .is-menu-open {
+  .is-menu-open,
+  .is-menu-open body {
     height: 100%;
     overflow: hidden;
   }
