use Helvetica as Fallback on IE9

--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -16,6 +16,10 @@
   @include media('≤mobile-portrait') {
     font-size: 18px;
   }
+
+  @media screen and (min-width:0) and (min-resolution: .001dpcm) {
+    font-family: 'Helvetica', 'Arial', sans-serif;
+  }
 }
 
 
@@ -43,6 +47,10 @@
   @include media('≤mobile-portrait') {
     font-size: 15px;
   }
+
+  @media screen and (min-width:0) and (min-resolution: .001dpcm) {
+    font-family: 'Helvetica', 'Arial', sans-serif;
+  }
 }
 
 /// Alternate headline text.
@@ -52,6 +60,10 @@
 @mixin type-headline-alternate {
   font: 18px / 1.333 $supporting-font-stack;
   font-weight: 700;
+
+  @media screen and (min-width:0) and (min-resolution: .001dpcm) {
+    font-family: 'Helvetica', 'Arial', sans-serif;
+  }
 }
 
 
@@ -123,6 +135,10 @@
   font: 16px / 1.375 $supporting-font-stack;
   letter-spacing: 0.2px;
   color: $medium-grey;
+
+  @media screen and (min-width:0) and (min-resolution: .001dpcm) {
+    font-family: 'Helvetica', 'Arial', sans-serif;
+  }
 }
 
 
@@ -134,6 +150,10 @@
   font: 14px / 1.3333 $supporting-font-stack;
   letter-spacing: 0.1px;
   color: $medium-grey;
+
+  @media screen and (min-width:0) and (min-resolution: .001dpcm) {
+    font-family: 'Helvetica', 'Arial', sans-serif;
+  }
 }
 
 
@@ -148,6 +168,10 @@
   font-weight: 700;
   letter-spacing: 1.8px;
   color: $medium-grey;
+
+  @media screen and (min-width:0) and (min-resolution: .001dpcm) {
+    font-family: 'Helvetica', 'Arial', sans-serif;
+  }
 }
 
 
@@ -310,6 +334,10 @@
   font-weight: 700;
   text-align: center;
   margin-bottom: 20px;
+
+  @media screen and (min-width:0) and (min-resolution: .001dpcm) {
+    font-family: 'Helvetica', 'Arial', sans-serif;
+  }
 
   @include media('<=mobile-portrait') {
     font-size: $size - ($size/5);
