--- a/app/assets/styles/base/base.scss
+++ b/app/assets/styles/base/base.scss
@@ -63,6 +63,10 @@ td, th {
   padding: 5px 20px 5px 0;
 }
 
+iframe {
+  display: block;
+}
+
 /**
  * Remove dirty outline when using Flickity
  */
