--- a/app/assets/styles/base/base.scss
+++ b/app/assets/styles/base/base.scss
@@ -29,7 +29,7 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: $light-grey;
     z-index: 75;
   }
 
