--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -312,7 +312,7 @@
 
 @mixin next-read-title($color: false, $size: 1.5em) {
   @include font-smoothing;
-  font-family: $supporting-font-stack;
+  @include supporting-font;
   font-weight: 700;
   text-align: center;
   margin-bottom: 20px;
@@ -402,6 +402,16 @@ $image-loader-size: 30px;
   .is-slider-loading .#{$inner},
   .is-slider-resizing .#{$inner} {
     opacity: 0;
+  }
+}
+
+// IE9 Supporting font replacement
+
+@mixin supporting-font {
+  font-family: $supporting-font-stack;
+
+  .lte-ie9 & {
+    font-family: 'Helvetica', Arial, sans-serif;
   }
 }
 
