--- a/app/assets/styles/utilities/mixins.scss
+++ b/app/assets/styles/utilities/mixins.scss
@@ -10,7 +10,8 @@
 ///   <p class='type-intro'>Vier Tage lang haben drei Schneeschuhwanderer aus Tschechien im Salzburger Pinzgau im Winterraum einer Hütte in 2100 Metern Seehöhe ausgeharrt, weil sie nach einem massiven Wetterumschwung nicht mehr absteigen konnten.</p>
 @mixin type-intro {
   @include supporting-font;
-  font: 22px / 1.41;
+  font-size: 22px;
+  line-height: 1.41;
   font-weight: 700;
   letter-spacing: 0.2px;
 
@@ -40,7 +41,8 @@
 ///  <p class='type-copy-alternate'>Die Redaktion sucht nach Augenzeugen, die am vergangenen Dienstag den Unfall am Marktplatz in Aarau beobachet haben. Ein schwarzer Mercedes war an einen Poller geprallt und hatte sich überschlagen, 2 Passanten wurden leicht verletzt.</p>
 @mixin type-copy-alternate {
   @include supporting-font;
-  font: 16px / 1.5;
+  font-size: 16px;
+  line-height: 1.5;
 
   @include media('≤mobile-portrait') {
     font-size: 15px;
@@ -53,7 +55,8 @@
 ///  <h2 class='type-headline-alternate'>Die Redaktion sucht nach Augenzeugen, die am vergangenen Dienstag den Unfall am Marktplatz in Aarau beobachet haben. Ein schwarzer Mercedes war an einen Poller geprallt und hatte sich überschlagen, 2 Passanten wurden leicht verletzt.</h2>
 @mixin type-headline-alternate {
   @include supporting-font;
-  font: 18px / 1.333;
+  font-size: 18px;
+  line-height: 1.333;
   font-weight: 700;
 }
 
@@ -124,7 +127,8 @@
 ///  <p class='type-caption'>Zunzger Kinder im Fasnachtsfieber</p>
 @mixin type-caption {
   @include supporting-font;
-  font: 16px / 1.375;
+  font-size: 16px;
+  line-height: 1.375;
   letter-spacing: 0.2px;
   color: $medium-grey;
 
@@ -138,7 +142,8 @@
 ///  <p class='type-detail'>Abonnieren</p>
 @mixin type-detail {
   @include supporting-font;
-  font: 14px / 1.3333;
+  font-size: 14px;
+  line-height: 1.3333;
   letter-spacing: 0.1px;
   color: $medium-grey;
 
@@ -153,7 +158,8 @@
 ///  <p class='type-catchword'>DEUTSCHLAND</p>
 @mixin type-catchword {
   @include supporting-font;
-  font: 13px / 1.23;
+  font-size: 13px;
+  line-height: 1.23;
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 1.8px;
