Base: pad body for everything except <=IE9

--- a/app/assets/styles/base/base.scss
+++ b/app/assets/styles/base/base.scss
@@ -4,7 +4,12 @@ body {
   font: 100% / 1.5 $text-font-stack;
   color: $black;
   overflow-x: hidden;
+}
 
+/**
+ * Give the absolutely-positioned navigation some room
+ */
+html:not(.lte-ie9) body {
   @include media('<=tablet-portrait') {
     padding-top: 100px;
   }
