--- a/app/assets/styles/base/base.scss
+++ b/app/assets/styles/base/base.scss
@@ -3,6 +3,7 @@
 body {
   font: 100% / 1.5 $text-font-stack;
   color: $black;
+  min-width: 280px;
 
   @include media('<=tablet-portrait') {
     padding-top: 100px;
