add global default radius to variables

--- a/app/assets/styles/utilities/variables.scss
+++ b/app/assets/styles/utilities/variables.scss
@@ -184,6 +184,11 @@ $sidebar-width: 350px;
 /// Component spacing in between components expressed in ems
 $component-spacing: 1.5em;
 
+/// Default radius in pixels
+/// @type Length
+/// @group container
+$default-radius: 3px;
+
 // -----------------------------------------------------------------------------
 // LAYOUT MIXINS
 // -----------------------------------------------------------------------------
