added recaptcha2 middleware

--- a/app/includes/__head_bottom.html
+++ b/app/includes/__head_bottom.html
@@ -63,3 +63,4 @@
 {% if withAds -%}
 <!--# include virtual="{{ staticBasePath }}/client/includes/advertising/{{ skin }}_{{ pageType }}.html" -->
 {%- endif %}
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
