add proof of concept implementation of critical css for article page

--- a/app/includes/__head_bottom.html
+++ b/app/includes/__head_bottom.html
@@ -1,6 +1,11 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+  {% include "client/includes/css/article-critical.css" %}
+</style>
+
 <script id="load-css">
   {% include "client/scripts/loadCSS.js" %}
   loadCSS("{{ staticBasePath }}/client/styles.css");
