--- a/app/assets/styles/base/advertising.scss
+++ b/app/assets/styles/base/advertising.scss
@@ -1,76 +1,12 @@
 @import 'globals';
 
-.wrapper {
-  position: relative;
-  width: 100%;
-}
-
-.sidebar {
-  position: absolute;
-  top: 0;
-  left: 100%;
-  width: $sidebar-width;
-  background: red;
-  display: none;
-
-  @include media('>desktop-laptop') {
-    display: block;
-  }
-}
-
-.main {
-  @include main-layout;
-  display: flex;
-  flex-flow: row wrap;
-  position: relative;
-}
-
-.article-intro,
-.article-detail {
-  @include article-body-width;
-}
-
-
-/**
- * We use FlexBox to change the order of the elements in the article.
- * 1. Flexbox needs width
- */
-
-// scss-lint:disable SelectorFormat, IdSelector
-.az-iso--articleIntro,
-.az-iso--articleDetail,
-.az-iso--relatedVideos {
-  width: 100%; /* 1 */
-}
-
-.az-iso--articleIntro {
-  order: 1;
-}
-
-.recommendations-top {
-  order: 2;
-
-  @include media('>desktop-laptop') {
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
-}
-
-.az-iso--articleDetail {
-  order: 3;
-}
-
-.recommendations-bottom {
-  order: 4;
-}
-
 .ad * {
   box-sizing: content-box;
 }
 
 .ad a {
   display: block;
+  margin-bottom: 0 !important;
 }
 
 .ad img,
@@ -94,19 +30,7 @@
   }
 }
 
-.main .ad {
-  @include media('<=desktop-laptop') {
-    order: 4;
-  }
-
-  @include media('>desktop-laptop') {
-    order: 3;
-  }
-}
-
-.az-iso--relatedVideos {
-  order: 5; /* 5 */
-}
+// scss-lint:disable SelectorFormat, IdSelector
 
 #content_board,
 #top_board,
@@ -156,6 +80,72 @@
 
   @include media('>mobile-portrait') {
     margin-top: 40px;
+  }
+}
+
+#rectangle {
+  width: 320px;
+  height: 250px;
+  background-color: #f90;
+  margin-bottom: 27px;
+
+  @include media('<=mobile-portrait') {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  @include media('>mobile-portrait') {
+    margin-top: 20px;
+    margin-left: 27px;
+    float: right;
+  }
+
+  &:first-child {
+    margin-top: 0;
+  }
+
+  &:last-child {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  &.is-below-sidebar {
+    @include media('>desktop-laptop') {
+      margin-right: -220px;
+    }
+  }
+}
+
+/**
+ * Hacking layout for when a rectangle ad immediately follows a floated enrichment
+ */
+.enrichment--aside + div #rectangle:first-child {
+  margin-top: 6px;
+  margin-bottom: 35px;
+
+  @include media('>mobile-portrait') {
+    float: none;
+    position: relative;
+    top: 6px;
+    left: 300px;
+  }
+
+  @include media('>mobile-portrait', '<=desktop-laptop') {
+    margin-right: -$container-spacing * 2;
+  }
+
+  @include media('>mobile-portrait', '<=700px') {
+    margin-left: 0;
+    left: 270px;
+  }
+
+  @include media('>900px', '<=1150px') {
+    left: 200px;
+  }
+
+  @include media('>1275px') {
+    left: 200px;
   }
 }
 
